[tool.poetry]
name = "huggingface"
version = "0.1.0"
description = ""
authors = ["Ariana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
transformers = "^4.35.2"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
tqdm = "^4.66.1"
datasets = "^2.15.0"
accelerate = "^0.25.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
